Hardware/Nucleo_proj/.metadata/.plugins/org.eclipse.cdt.ui/DoorDisplay.build.log
12:34:16 **** Incremental Build of configuration Debug for project DoorDisplay ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/funclib.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L476xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/funclib.d" -MT"Core/Src/funclib.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/funclib.o"
arm-none-eabi-gcc "../Core/Src/syscalls.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L476xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/syscalls.d" -MT"Core/Src/syscalls.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/syscalls.o"
arm-none-eabi-gcc "../Core/Src/sysmem.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L476xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/sysmem.d" -MT"Core/Src/sysmem.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/sysmem.o"
arm-none-eabi-gcc "../Core/Src/system_stm32l4xx.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L476xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/system_stm32l4xx.d" -MT"Core/Src/system_stm32l4xx.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/system_stm32l4xx.o"
arm-none-eabi-gcc "../Core/Src/tstmain.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L476xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/tstmain.d" -MT"Core/Src/tstmain.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/tstmain.o"
arm-none-eabi-gcc "../Core/Src/usart.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L476xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/usart.d" -MT"Core/Src/usart.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/usart.o"
arm-none-eabi-gcc "../Core/DISPLAY/Target/lcd_io.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L476xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/DISPLAY/Target/lcd_io.d" -MT"Core/DISPLAY/Target/lcd_io.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/DISPLAY/Target/lcd_io.o"
arm-none-eabi-gcc "../Core/DISPLAY/Target/mem_io.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L476xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/DISPLAY/Target/mem_io.d" -MT"Core/DISPLAY/Target/mem_io.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/DISPLAY/Target/mem_io.o"
In file included from ../Core/DISPLAY/Target/mem_io.c:22:
../Core/DISPLAY/Target/mem_io.h:29:10: fatal error: stm32g0xx_nucleo_errno.h: No such file or directory
   29 | #include "stm32g0xx_nucleo_errno.h"
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~
compilation terminated.
In file included from ../Core/DISPLAY/Target/lcd_io.c:21:
../Core/DISPLAY/Target/lcd_io.h:29:10: fatal error: stm32g0xx_nucleo_errno.h: No such file or directory
   29 | #include "stm32g0xx_nucleo_errno.h"
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~
compilation terminated.
make: *** [Core/DISPLAY/Target/subdir.mk:24: Core/DISPLAY/Target/mem_io.o] Error 1
make: *** Waiting for unfinished jobs....
make: *** [Core/DISPLAY/Target/subdir.mk:22: Core/DISPLAY/Target/lcd_io.o] Error 1
../Core/Src/tstmain.c: In function 'main':
../Core/Src/tstmain.c:90:3: warning: implicit declaration of function 'MX_USART2_UART_Init'; did you mean 'MX_USART3_UART_Init'? [-Wimplicit-function-declaration]
   90 |   MX_USART2_UART_Init();
      |   ^~~~~~~~~~~~~~~~~~~
      |   MX_USART3_UART_Init
../Core/Src/tstmain.c:102:22: error: 'LD2_GPIO_Port' undeclared (first use in this function); did you mean 'TCK_GPIO_Port'?
  102 |    HAL_GPIO_WritePin(LD2_GPIO_Port, LD2_Pin, GPIO_PIN_SET);
      |                      ^~~~~~~~~~~~~
      |                      TCK_GPIO_Port
../Core/Src/tstmain.c:102:22: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/tstmain.c:102:37: error: 'LD2_Pin' undeclared (first use in this function)
  102 |    HAL_GPIO_WritePin(LD2_GPIO_Port, LD2_Pin, GPIO_PIN_SET);
      |                                     ^~~~~~~
make: *** [Core/Src/subdir.mk:72: Core/Src/tstmain.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

12:34:17 Build Failed. 8 errors, 1 warnings. (took 862ms)

